--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@
 }
 
 
-#navbar>a:nth-of-type(3)>img {
+#navbar>a:nth-of-type(4)>img {
     width: 50px;
     height: 50px;
 }
@@ -262,6 +262,7 @@
 #W2S {
     width: 80%;
     margin: auto;
+    margin-bottom: 10px;
 }
 
 #W2S>div {
