--- a/index.css
+++ b/index.css
@@ -1,7 +1,14 @@
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
 /* NAVBAR */
 
 #navbar {
-    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -31,6 +38,57 @@
     height: 50px;
 }
 
+@media all and (min-width:481px) and (max-width:768px) {
+    #navbar>img:nth-of-type(1) {
+        width: 120px;
+        height: 70px;
+    }
+    
+    
+    #navbar>img:nth-of-type(2) {
+        width: 30px;
+        height: 30px;
+    }
+
+    #navbar>a:nth-of-type(4)>img {
+        width: 30px;
+        height: 30px;
+    }
+
+    #navbar {
+        gap: 15px;
+        font-size: 10px;
+    }
+}
+
+@media all and (min-width:0px) and (max-width:480px) {
+    #navbar {
+        
+    position: relative;
+    }
+    #navbar>img:nth-of-type(1) {
+        width: 90px;
+        height: 40px;
+    }
+    
+    
+    #navbar>img:nth-of-type(2) {
+        width: 20px;
+        height: 20px;
+    }
+
+    #navbar>a:nth-of-type(4)>img {
+        width: 20px;
+        height: 20px;
+    }
+
+    #navbar {
+        flex-direction: column;
+        gap: 10px;
+        font-size: 10px;
+    }
+}
+
 
 /* CONTAINER 1 */
 #container1 {
@@ -39,9 +97,10 @@
     background-color: #34A5CA;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     color: white;
+    padding: 15px;
 }
 
 #container1 img {
@@ -50,11 +109,9 @@
 
 #container1 div:nth-child(1) {
     width: 380px;
-    margin-right: 100px;
 }
 
 #container1 div:nth-of-type(2) {
-    margin-left: 100px;
     width: 30%;
 }
 
@@ -70,6 +127,53 @@
     border-radius: 5px;
     margin-top: 12px;
     cursor: pointer;
+}
+
+
+@media all and (min-width:481px) and (max-width:768px) {    
+    #container1 img {
+        width: 70%;
+    }
+    
+    #container1 div:nth-child(1) {
+        width: 300px;
+    }
+    
+    #container1 div:nth-of-type(2) {
+        width: 20%;
+    }
+    
+    #container1 p {
+        font-size: 15px;
+    }
+    
+    #container1 button, #container2 button {
+        padding: 12px 20px;
+        margin-top: 8px;
+    }
+}
+
+@media all and (min-width:0px) and (max-width:480px) {
+    #container1 img {
+        width: 60%;
+    }
+    
+    #container1 div:nth-child(1) {
+        width: 250px;
+    }
+    
+    #container1 div:nth-of-type(2) {
+        width: 15%;
+    }
+    
+    #container1 p {
+        font-size: 12px;
+    }
+    
+    #container1 button, #container2 button {
+        padding: 10px 18px;
+        margin-top: 6px;
+    }
 }
 
 /* CONTAINER 2 */
@@ -109,7 +213,33 @@
     width: 40%;
     margin: auto;
 }
+@media all and (min-width:481px) and (max-width:768px) {    
+    #container2 div p:nth-of-type(1){
+        font-size: 35px;
+    }
+    
+    #container2 div p:nth-of-type(2){
+        font-size: 35px;
+    }
+    
+    #container2 div p:nth-of-type(3){
+        font-size: 15px;
+    }
+}
 
+@media all and (min-width:0px) and (max-width:480px) {
+    #container2 div p:nth-of-type(1){
+        font-size: 27px;
+    }
+    
+    #container2 div p:nth-of-type(2){
+        font-size: 27px;
+    }
+    
+    #container2 div p:nth-of-type(3){
+        font-size: 12px;
+    }
+}
 /* CONTAINER 3 */
 
 #container3 {
@@ -120,6 +250,18 @@
     grid-template-rows: 1fr 1fr;
     gap: 10px;
     margin-top: 10px;
+}
+
+@media all and (min-width:481px) and (max-width:768px) {    
+    #container3{
+        gap: 7px;
+    }
+}
+
+@media all and (min-width:0px) and (max-width:480px) {
+    #container3{
+        gap: 5px;
+    }
 }
 
 /* CARD 1 */
@@ -150,6 +292,35 @@
 #card1 img{
     width: 80%;
 }
+
+@media all and (min-width:481px) and (max-width:768px) {    
+    #card1 p:nth-of-type(1) {
+        font-size: 35px;
+    }
+
+    #card1 p:nth-of-type(2) {
+        font-size: 18px;
+    }
+
+    #card1 p:nth-of-type(3) {
+        font-size: 15px;
+    }
+}
+
+@media all and (min-width:0px) and (max-width:480px) {
+    #card1 p:nth-of-type(1) {
+        font-size: 28px;
+    }
+
+    #card1 p:nth-of-type(2) {
+        font-size: 15px;
+    }
+
+    #card1 p:nth-of-type(3) {
+        font-size: 12px;
+    }
+}
+
 /* CARD 2 */
 #card2 {
     background-color: #F9FCFD;
@@ -173,6 +344,34 @@
 
 #card2 img{
     width: 100%;
+}
+
+@media all and (min-width:481px) and (max-width:768px) {    
+    #card2 p:nth-of-type(1) {
+        font-size: 35px;
+    }
+
+    #card2 p:nth-of-type(2) {
+        font-size: 18px;
+    }
+
+    #card2 p:nth-of-type(3) {
+        font-size: 15px;
+    }
+}
+
+@media all and (min-width:0px) and (max-width:480px) {
+    #card2 p:nth-of-type(1) {
+        font-size: 28px;
+    }
+
+    #card2 p:nth-of-type(2) {
+        font-size: 15px;
+    }
+
+    #card2 p:nth-of-type(3) {
+        font-size: 12px;
+    }
 }
 /* CARD 3 */
 #card3 {
@@ -199,6 +398,33 @@
     width: 100%;
 }
 
+@media all and (min-width:481px) and (max-width:768px) {    
+    #card3 p:nth-of-type(1) {
+        font-size: 35px;
+    }
+
+    #card3 p:nth-of-type(2) {
+        font-size: 18px;
+    }
+
+    #card3 p:nth-of-type(3) {
+        font-size: 15px;
+    }
+}
+
+@media all and (min-width:0px) and (max-width:480px) {
+    #card3 p:nth-of-type(1) {
+        font-size: 28px;
+    }
+
+    #card3 p:nth-of-type(2) {
+        font-size: 15px;
+    }
+
+    #card3 p:nth-of-type(3) {
+        font-size: 12px;
+    }
+}
 /* CARD 4 */
 #card4 {
     background-color: #D8D9DA;
@@ -226,7 +452,33 @@
     width: 100%;
 }
 
+@media all and (min-width:481px) and (max-width:768px) {    
+    #card4 p:nth-of-type(1) {
+        font-size: 35px;
+    }
 
+    #card4 p:nth-of-type(2) {
+        font-size: 18px;
+    }
+
+    #card4 p:nth-of-type(3) {
+        font-size: 15px;
+    }
+}
+
+@media all and (min-width:0px) and (max-width:480px) {
+    #card4 p:nth-of-type(1) {
+        font-size: 28px;
+    }
+
+    #card4 p:nth-of-type(2) {
+        font-size: 15px;
+    }
+
+    #card4 p:nth-of-type(3) {
+        font-size: 12px;
+    }
+}
 /* CONTAINER 4 */
 
 #container4 {
